basic functionality and style added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <script src="index.js"></script>
+    <div class="section">
+      <h1>Etch-a-Sketch</h1>
+      <div class="container" id="container"></div>
+
+      <div class="pallet-container">
+        <div class="color-pallet white" id="white"></div>
+        <div class="color-pallet black" id="black"></div>
+        <div class="green color-pallet" id="green"></div>
+        <div class="red color-pallet" id="red"></div>
+        <div class="blue color-pallet" id="blue"></div>
+        <div class="yellow color-pallet" id="yellow"></div>
+        <div class="purple color-pallet" id="purple"></div>
+        <div class="orange color-pallet" id="orange"></div>
+      </div>
+    </div>
   </body>
+  <script src="index.js"></script>
 </html>
