further enhancements and features

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <div class="purple color-pallet" id="purple"></div>
         <div class="orange color-pallet" id="orange"></div>
       </div>
+
+      <button class="clear" id="clear">Clear</button>
     </div>
   </body>
   <script src="index.js"></script>
